salesforce/generated/sunrun_ingest_api/desktop-mf/objects/Desktop___Dim_Customer__dll/fields/KQ_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>KQ_Customer_ID__c</fullName>
    <label>KQ_Customer_ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_Customer_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>